--- a/zones/cluster.ws.yaml
+++ b/zones/cluster.ws.yaml
@@ -84,3 +84,4 @@ easio: [ns41.cloudns.net, ns42.cloudns.net, ns43.cloudns.net, ns44.cloudns.net] 
 itdude: [ns1.afraid.org, ns2.afraid.org, ns1.gcorelabs.net, ns2.gcdn.services]
 chia: [ns41.cloudns.net, ns42.cloudns.net, ns43.cloudns.net, ns44.cloudns.net]
 lavalink: [ns1.gcorelabs.net, ns2.gcdn.services]
+shubham: [ns1.hostry.com, ns2.hostry.com, ns3.hostry.com, ns4.hostry.com]
